[gd_scene load_steps=8 format=2]

[ext_resource path="res://Boss.gd" type="Script" id=1]
[ext_resource path="res://Juego/boss_Angry.png" type="Texture" id=2]
[ext_resource path="res://Juego/boss_Normal.png" type="Texture" id=3]
[ext_resource path="res://Juego/boss_dead.png" type="Texture" id=4]
[ext_resource path="res://Ataque.tscn" type="PackedScene" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "angry",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 83.4266

[node name="Boss" type="KinematicBody2D"]
script = ExtResource( 1 )
Attack_thing = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -4.57764e-05, 0 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 1 )
animation = "normal"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.880264, 0.880257 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShapeBoos" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.880264, 0.880257 )
shape = SubResource( 2 )

[node name="TimerAttack" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="TimerAttackStop" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="TimerAnimation" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="TimerAttack" to="." method="_on_TimerAttack_timeout"]
[connection signal="timeout" from="TimerAttackStop" to="." method="_on_TimerAttackStop_timeout"]
[connection signal="timeout" from="TimerAnimation" to="." method="_on_TimerAnimation_timeout"]
